samples/_failures_safe/1761545593_1e237f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ba46e5f.c: In function ‘main’:
./samples/SAFE/__tmp_7ba46e5f.c:142:9: error: expected declaration or statement at end of input
  142 |         printf("Enter command: ");
      |         ^~~~~~
./samples/SAFE/__tmp_7ba46e5f.c:142:9: error: expected declaration or statement at end of input
